--- a/K8/ngnix.yaml
+++ b/K8/ngnix.yaml
@@ -11,15 +11,25 @@ spec:
     targetPort: 80
   type: LoadBalancer
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: nginx
   labels:
     app: nginx
 spec:
-  containers:
-  - name: nginx
-    image: nginx:latest
-    ports:
-    - containerPort: 80
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      hostname: nginx
+      containers:
+      - name: nginx
+        image: zaksk99/nginx
+        ports:
+        - containerPort: 80
+  
