--- a/K8/frontend.yaml
+++ b/K8/frontend.yaml
@@ -1,38 +1,25 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: projectfront
+  name: frontend
 spec:
   selector:
-    app: projectfront
+    app: frontend
   ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
-  type: ClusterIP
-apiVersion: apps/v1  
-kind: Deployment
+  type: LoadBalancer
+---
+apiVersion: v1  
+kind: Pod
 metadata:
-name: projectfront
-labels:  
-  app: projectfront
+  name: frontend
+  labels:  
+    app: frontend
 spec:
-replicas: 1
-selector:
-  matchLabels:
-    app: projectfront
-strategy:
-  type: RollingUpdate
-  rollingUpdate:
-    maxSurge: 25%
-    maxUnavailable: 25%
-   template:
-    metadata:
-      labels:
-        app: projectfront
-    spec:
-      containers:
-      - name: projectfront
-        image: zaksk99/frontend
-        ports:
-        - containerPort: 8080    
+  containers:
+  - name: frontend
+    image: qaedd/spring-petclinic-angular:latest
+    ports:
+    - containerPort: 8080
