--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,10 @@ http {
     server {
         listen 80;
         location / {
-            proxy_pass http://frontend:5000;
+            proxy_pass http://front-end:8080;
         }
-        location /api {
-            proxy_pass http://backend:5000;
+        location /petclinic/api {
+            proxy_pass http://back-end:9966/petclinic/api;
         }
     }
 }
