--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,16 +6,19 @@ pipeline {
     stages {
         stage('Run unit tests') {
             steps {
+                sh "chmod +x -R ${env.WORKSPACE}"
                 sh "bash jenkins/test.sh"
             }
         }
         stage('Build') {
             steps {
+                sh "chmod +x -R ${env.WORKSPACE}"
                 sh "bash jenkins/build.sh"
             }
         }
         stage('Push') {
             steps {
+                sh "chmod +x -R ${env.WORKSPACE}"
                 sh "bash jenkins/push.sh"
             }
         }
