--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,12 +4,13 @@ pipeline {
                 DOCKER_CREDS = credentials('docker-creds')
     }
     stages {
-        stage('Run unit tests') {
-            steps {
-                // sh "chmod +x -R ${env.WORKSPACE}"
-                // sh "bash jenkins/test.sh"
-            }
-        }
+        // stage('Run unit tests') {
+        //     steps {
+        //         // sh "chmod +x -R ${env.WORKSPACE}"
+        //         // sh "bash jenkins/test.sh"
+                
+        //     }
+        // }
         stage('Build') {
             steps {               
                 sh "bash jenkins/build.sh"
