--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,7 +35,7 @@ pipeline {
         // }
         stage('Cluster'){
             steps{
-                withAWS(credentials: 'aws-creds', region: 'eu-west-2')
+                // withAWS(credentials: 'aws-creds', region: 'eu-west-2')
                 sh aws eks --region eu-west-2 update-kubeconfig --name emoluster
                 sh kubectl apply -f K8/backend.yaml
                 sh kubectl apply -f K8/frontend.yaml
