--- a/JenkinsFile
+++ b/JenkinsFile
@@ -36,8 +36,8 @@ pipeline {
         stage('Cluster'){
             steps{
                 // sh "bash jenkins/deploy.sh"
-                sh "kubectl apply -f K8/frontend.yaml"
-                sh "kubectl apply -f K8/backend.yaml"
+                sh "sudo kubectl apply -f K8/frontend.yaml"
+                sh "sudo kubectl apply -f K8/backend.yaml"
 
             }
         }
