--- a/JenkinsFile
+++ b/JenkinsFile
@@ -36,7 +36,7 @@ pipeline {
         stage('Cluster'){
             steps{
                 // sh "bash jenkins/deploy.sh"
-                sh "aws eks update-kubeconfig --name emoluster"
+                // sh "aws eks update-kubeconfig --name emoluster2"
                 sh "sudo kubectl apply -f K8/frontend.yaml"
                 sh "sudo kubectl apply -f K8/backend.yaml"
 
