--- a/JenkinsFile
+++ b/JenkinsFile
@@ -38,8 +38,8 @@ pipeline {
                 sh "whoami"
                 // sh "bash jenkins/deploy.sh"
                 // sh "aws eks update-kubeconfig --name emoluster2"
-                sh "sudo kubectl apply -f K8/frontend.yaml"
-                sh "sudo kubectl apply -f K8/backend.yaml"
+                sh "kubectl apply -f K8/frontend.yaml"
+                sh "kubectl apply -f K8/backend.yaml"
 
             }
         }
