--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Run unit tests') {
             steps {
-                sh "chmod +x -R ${env.WORKSPACE}"
+                // sh "chmod +x -R ${env.WORKSPACE}"
                 sh "bash jenkins/test.sh"
                 
             }
